gcc-defaults (1.66) UNRELEASED; urgency=low

  [Arthur Loiret]
  * Build multilib packages for mips and mipsel.

 -- Matthias Klose <doko@debian.org>  Sun, 23 Mar 2008 13:05:35 +0100

gcc-defaults (1.64) unstable; urgency=low

  [Matthias Klose]
  * gcc: Remove dangling FAQ symlink. Closes: #453812.
  * gij: Update conflict with java-gcj-compat,
    provide java*-runtime-headless instead of java*-runtime.
  * Depend on the packages of the GCC-4.2.3 release.
  * Tighten dependencies for gnat packages.

  [Ludovic Brenta]
  * libgnatvsn-dev, libgnatprj-dev: new packages; depend on the
    corresponding packages from gnat-4.3.
  * Make gnat-4.3 the default on all architectures.
  * gnat: install documentation in /usr/share/doc/gnat; do not symlink
    to cpp and do not depend on cpp (Ada does not need a C
    preprocessor).

  [Arthur Loiret]
  * gdc: Make gdc-4.2 the default on hurd-i386.

 -- Ludovic Brenta <lbrenta@debian.org>  Wed, 12 Mar 2008 22:32:44 +0100

gcc-defaults (1.63) unstable; urgency=low

  * Make gfortran-4.3 the default on all architectures.
  * Make gij-4.3/gcj-4.3 the default on all architectures except alpha.

 -- Matthias Klose <doko@debian.org>  Sun, 20 Jan 2008 17:17:53 +0100

gcc-defaults (1.62) unstable; urgency=low

  * Dont build libgcj-bc on the Hurd (Michael Banck). Closes: #445279.
  * (Build-)depend on gcc-4.2 (>= 4.2.2-3).
  * Make gpc-2.1 based on GCC-4.1 the default.
  * Make GCC-4.2 the default on m68k. Closes: #451190.
  * Add gdc, make gdc-4.1 the default (Arthur Loiret). Closes: #456596.

 -- Matthias Klose <doko@debian.org>  Tue, 25 Dec 2007 19:58:38 +0100

gcc-defaults (1.61) unstable; urgency=medium

  * libgcj-common: Update classmap db's for gcj-4.3 as well.
  * Do not build g77 and g77-doc for armel.
  * gcj: Install gc-analyze symlinks where the default is >= 4.2.

 -- Matthias Klose <doko@debian.org>  Tue, 04 Sep 2007 02:41:40 +0200

gcc-defaults (1.60) unstable; urgency=low
