@@ -3,6 +3,10 @@ gcc-defaults (1.66) UNRELEASED; urgency=low
   [Arthur Loiret]
   * Build multilib packages for mips and mipsel.
 
+  [Matthias Klose]
+  * Make GCC-4.3 the default on all architectures except alpha, amd64,
+    hppa, i386.
+
  -- Matthias Klose <doko@debian.org>  Sun, 23 Mar 2008 13:05:35 +0100
 
 gcc-defaults (1.64) unstable; urgency=low
